wk_taa_taaqa/src/objects/VF_Tracking__c.object
<CustomObject>
    <description>Used for Tracking of VisualForce pages.</description>
    <fields>
        <fullName>Datetime_Visited__c</fullName>
        <label>Datetime Visited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VF_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VF_Page_Visited__c</fullName>
        <label>VF Page Visited</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VF Tracking</label>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>VF Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VF Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>